--- a/HTML Tutorial/index.html
+++ b/HTML Tutorial/index.html
@@ -3,6 +3,13 @@
 
 <body>
     <h1>Good morning</h1>
+    <h2>CatPhotoApp</h2>
+    <main>
+        <!--TODO: Add link to cat photos-->
+        <p>Click here to view more <a href="#" target="_blank">cat photos</a></p>
+        <img src="https://fcc.im/fcc-relaxing-cat" alt="A cute orange cat lying on it`s back">
+    </main>
+
 </body>
 
 </html>
