--- a/HTML Tutorial/index.html
+++ b/HTML Tutorial/index.html
@@ -7,9 +7,23 @@
     <main>
         <!--TODO: Add link to cat photos-->
         <p>Click here to view more <a href="#" target="_blank">cat photos</a></p>
-        <img src="https://fcc.im/fcc-relaxing-cat" alt="A cute orange cat lying on it`s back">
+        <a href="#"><img src="https://fcc.im/fcc-relaxing-cat" alt="A cute orange cat lying on it`s back"></a>
+        <h3>Cat lists</h3>
+        <p>Things cats <em>love</em>:</p>
+        <ul>
+            <li>cat nip</li>
+            <li>laser pointers</li>
+            <li>lasagna</li>
+        </ul>
+        <img src="https://cdn.freecodecamp.org/youtube/html-course/lasagna.jpg" alt="Lasagna">
+        <p>Things cats <strong>hate</strong>:</p>
+        <ol>
+            <li>flea treatment</li>
+            <li>thunder</li>
+            <li>other cats</li>
+        </ol>
+        <img src="https://cdn.freecodecamp.org/youtube/html-course/cats.jpg" alt="">
     </main>
-
 </body>
 
 </html>
